...
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/outcome"
                android:layout_height="80dp"
                android:layout_width="match_parent"
                android:gravity="end"
                android:singleLine="true"
                android:textColor="@color/purple_200"
                android:textSize="60sp"
...
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/clear"
                style="@style/Operation"
                android:text="C"/>
            <TextView
                android:id="@+id/logarithm"
                style="@style/Operation"
                android:text="log"/>
            <TextView
                android:id="@+id/percent"
                style="@style/Operation"
                android:text="%"/>
            <TextView
                android:id="@+id/divide"
                style="@style/Operation"
                android:text="/"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
            android:id="@+id/keySeven"
            style="@style/DigitNumber"
            android:text="7"/>
            <TextView
            android:id="@+id/keyEight"
            style="@style/DigitNumber"
            android:text="8"/>
            <TextView
            android:id="@+id/keyNine"
            style="@style/DigitNumber"
            android:text="9"/>
            <TextView
            android:id="@+id/multiply"
            style="@style/Operation"
            android:text="x"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/keyFour"
                style="@style/DigitNumber"
                android:text="4"/>
            <TextView
                android:id="@+id/keyFive"
                style="@style/DigitNumber"
                android:text="5"/>
            <TextView
                android:id="@+id/keySix"
                style="@style/DigitNumber"
                android:text="6"/>
            <TextView
                android:id="@+id/subtract"
                style="@style/Operation"
                android:text="-"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/keyOne"
                style="@style/DigitNumber"
                android:text="1"/>
            <TextView
                android:id="@+id/keyTwo"
                style="@style/DigitNumber"
                android:text="2"/>
            <TextView
                android:id="@+id/keyThree"
                style="@style/DigitNumber"
                android:text="3"/>
            <TextView
                android:id="@+id/add"
                style="@style/Operation"
                android:text="+"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/switchSign"
                style="@style/Operation"
                android:text="+/-"/>
            <TextView
                android:id="@+id/keyZero"
                style="@style/DigitNumber"
                android:text="0"/>
            <TextView
                android:id="@+id/power"
                style="@style/Operation"
                android:text="^"/>
            <TextView
                android:id="@+id/equal"
                style="@style/Equal"
                android:text="="/>
        </LinearLayout>
    </LinearLayout>


...
